--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,22 @@ robot/ros_ws/log/
 # --- Optional: runtime logs (if you create any under run/) ---
 robot/ros_ws/run/*.log
 robot/ros_ws/run/*.pid
+
+# --- KILO7 RT-003: ROS workspace build artifacts (never commit) ---
+robot/ros_ws/build/
+robot/ros_ws/install/
+robot/ros_ws/log/
+
+# --- Python artifacts ---
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/*.pyd
+**/*.egg-info/
+**/*.egg-link
+
+# --- Common tool caches ---
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.cache/
