CT-2026-01-20-RT-002: enforce install-only runtime + sanitizer; fix relay_kill import path

--- a/kilo7-backend.env
+++ b/kilo7-backend.env
@@ -6,9 +6,14 @@ KILO_ROS_WS=/opt/kilo7/robot/ros_ws
 # Optional. Leave blank to run with internal defaults (hotfix-safe).
 # Set to an actual config file path if/when you have one.
 KILO_CONFIG=
+
 # Relay kill-path (GPIO)
 KILO_RELAY_GPIO_PIN=17
-KILO_RELAY_ACTIVE_LOW=1
+KILO_GPIOD_CHIP=/dev/gpiochip0
+
+# Step 1.5: relay_kill uses gpiod and our wiring is LOW=RUN, HIGH=KILL
+KILO_RELAY_MODE=gpiod
+KILO_RELAY_KILL_LEVEL_LOW=0
 
 # pigpio connection (matches pigpiod.service)
 KILO_PIGPIO_HOST=127.0.0.1
