Step 1.7: MQTT/ROS hardening, IMU/heartbeat verification, docs and tooling updates\n\n- Bridge: QoS=1 heartbeat, clean shutdown, schema alerts (rate-limited)\n- Control: TTL enforcement intact; observability adjustments\n- Config: align MQTT host/TTLs; doc contracts updated\n- Tools: add step_1_7_verify.sh, capture logs under logs/step_1_7\n- Docs: PROJECT_STATE, CHANGELOG, AUTHORITY_CHAIN, INTERFACE_CONTRACT; add STEP_1_7_IDIOT_PROOF\n- Tests: ensure Step 1.6 invariants present\n\nIncludes current logs for acceptance review.

--- a/kilo7-backend.env
+++ b/kilo7-backend.env
@@ -3,16 +3,15 @@
 
 KILO_ROS_WS=/opt/kilo7/robot/ros_ws
 
-# Optional. Leave blank to run with internal defaults (hotfix-safe).
-# Set to an actual config file path if/when you have one.
-KILO_CONFIG=
+# Optional. Use explicit config path to ensure runtime picks updated settings.
+KILO_CONFIG=/opt/kilo7/robot/ros_ws/src/kilo_core/config/kilo.yaml
 
 # Relay kill-path (GPIO)
 KILO_RELAY_GPIO_PIN=17
 KILO_GPIOD_CHIP=/dev/gpiochip0
 
-# Step 1.5: relay_kill uses gpiod and our wiring is LOW=RUN, HIGH=KILL
-KILO_RELAY_MODE=gpiod
+# Step 1.5: relay_kill configuration (mode now controlled by kilo.yaml)
+# KILO_RELAY_MODE=gpiod  [DEPRECATED: unsupported mode, removed to use yaml config]
 KILO_RELAY_KILL_LEVEL_LOW=0
 
 # pigpio connection (matches pigpiod.service)
