CT-2026-01-27-RT-015: IMU staleness deny (Safety Gate) + test
- Add safety.imu_ttl_ms and IMU staleness tracking in Safety Gate
- Publish imu_ok/imu_age_ms in state_safety_v1 (additive)
- Add Step 2.3 IMU staleness test
- Update contract + decisions + changelog

Verification:
- robot/test_step_1_6_invariants.py (6/6 PASS)
- robot/test_step_1_8_ui_truth.py (3/3 PASS)
- robot/test_step_2_3_imu_stale.py (PASS with mqtt_bridge stopped to force stale)

--- a/robot/ros_ws/src/kilo_core/config/kilo.yaml
+++ b/robot/ros_ws/src/kilo_core/config/kilo.yaml
@@ -15,6 +15,7 @@ control:
 safety:
   override_required: true
   allow_clear_while_override: false
+  imu_ttl_ms: 2000
 
 hardware:
   relay_mode: "rpi_gpio"
