--- a/robot/ros_ws/run/systemd/kilo7-rosbridge.service
+++ b/robot/ros_ws/run/systemd/kilo7-rosbridge.service
@@ -7,6 +7,8 @@ Type=simple
 User=kilo
 WorkingDirectory=/opt/kilo7
 Environment=ROS_DISTRO=humble
+Environment=HOME=/home/kilo
+Environment=ROS_LOG_DIR=/opt/kilo7/logs/rosbridge
 ExecStart=/bin/bash -lc 'source /opt/ros/humble/setup.bash && source /opt/kilo7/robot/ros_ws/install/setup.bash && ros2 launch rosbridge_server rosbridge_websocket_launch.xml'
 Restart=always
 RestartSec=2
